<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/phone"
        android:title="@string/phone_number"
        android:icon="@drawable/phone_icon">

    </item>
    <item
        android:id="@+id/card"
        android:title="@string/cardNumber"
        android:icon="@drawable/card_icon">

    </item>
    <item
        android:id="@+id/safeLocation"
        android:title="@string/savedLoccation"
        android:icon="@drawable/location_icon">

    </item>
    <item
        android:id="@+id/transactionRequest"
        android:title="@string/transaction"
        android:icon="@drawable/transaction_icon">

    </item>
    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/report_icon">

    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon">

    </item>
</menu>