<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dnerd.dipty.mysecurityapp.CodeVerification">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/vreifyPurchase"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/codeVerificationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardVerifed"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/codeVerficationBackButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_custom"
            android:text="@string/backButton"
            android:textSize="20dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/codeVerficationEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enterCode"
            android:drawableLeft="@drawable/verify_icon"/>
           <!-- android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"-->


        <Button
            android:id="@+id/codeVerficationButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_custom"
            android:text="@string/verify_button"
            android:textSize="20dp"/>




</LinearLayout>
