<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dnerd.dipty.mysecurityapp.MainActivity" android:orientation="vertical"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="@string/app_name"
            android:textColor="@color/lightorange"
            android:textSize="60sp"
            android:textStyle="bold|italic" />
        <TextView
            android:textColor="@color/lightorangedark"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/w1">
        <!-- android:layout_marginTop="135dp" -->


        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:text="@string/login_button" />
        <Button
            android:id="@+id/buttonsignup"
            android:layout_marginTop="20dp"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:text="@string/signup_button" />
    </LinearLayout>

</LinearLayout>
