<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dnerd.dipty.mysecurityapp.EditCardNumber">

    <TextView
        android:id="@+id/cardTextViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/cardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/cardImageViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cardTextView"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/cardTextView"
        android:layout_toRightOf="@+id/cardTextView"
        android:src="@drawable/edit_icon" />

    <EditText
        android:id="@+id/cardEditTextNumber"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardImageViewEdit"
        android:layout_alignRight="@+id/cardImageViewEdit"
        android:layout_below="@+id/cardTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:hint="@string/cardNumber" />
    <EditText
        android:id="@+id/cardEditTextCcv"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardImageViewEdit"
        android:layout_alignRight="@+id/cardImageViewEdit"
        android:layout_below="@+id/cardEditTextNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/cardccv" />

    <Button
        android:id="@+id/cardSaveButton"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/cardEditTextCcv"
        android:layout_alignStart="@+id/cardEditTextCcv"
        android:layout_below="@+id/cardEditTextCcv"
        android:layout_marginTop="19dp"
        android:background="@drawable/buttonstylee"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        android:textSize="20dp" />

</RelativeLayout>
