<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dnerd.dipty.mysecurityapp.SignUp"
    tools:showIn="@layout/activity_sign_up" android:background="#FF2B283E"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/signupLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/lightorange"
            android:textSize="60sp"
            android:textStyle="bold|italic" />
        <EditText
            android:id="@+id/signupEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/name1"
            android:drawableLeft="@drawable/person_icon"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            />
        <EditText
            android:id="@+id/signupEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email_icon"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <EditText
            android:id="@+id/signupEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:password="true"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/password_icon"
            android:textColorHint="@android:color/white"
            android:textSize="15sp" />
        <!--        <progressbar
                    android:id="@+id/signupprogressbar"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:progressdrawable="@color/lightorangedark"/>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/signupLinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/signupButton"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/buttonstylee"
            android:text="@string/signup_button"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>
